add rate limit, fix endpoint admin
